--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="container flex bg-black">
       <div class="left">
+        <div class="close">
+          <img width="30" class="invert" src="close.svg" alt="">
+        </div>
         <div class="home bg-grey rounded m-1 p-1">
           <div class="logo">
             <img width="40px" class="invert" src="logo.svg" alt="" />
