--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
             <div class="abovebar">
               <div class="songinfo"></div>
               <div class="songbuttons">
-                <img id="prevoius" src="prevsong.svg" alt="" />
-                <img id="play" src="play.svg" alt="" />
-                <img id="next" src="nextsong.svg" alt="" />
+                <img width="35px" id="previous" src="prevsong.svg" alt="" />
+                <img width="35px" id="play" src="play.svg" alt="" />
+                <img width="35px" id="next" src="nextsong.svg" alt="" />
               </div>
               <div class="songtime"></div>
             </div>
