--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container flex bg-black">
       <div class="left">
         <div class="close">
-          <img width="30" class="invert" src="close.svg" alt="">
+          <img width="30" class="invert" src="close.svg" alt="" />
         </div>
         <div class="home bg-grey rounded m-1 p-1">
           <div class="logo">
@@ -89,7 +89,7 @@
                 width="24"
                 height="24"
                 color="#ffffff"
-                fill="none" 
+                fill="none"
               >
                 <path
                   d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18"
@@ -146,7 +146,15 @@
                 <img width="35px" id="play" src="play.svg" alt="" />
                 <img width="35px" id="next" src="nextsong.svg" alt="" />
               </div>
-              <div class="songtime"></div>
+              <div class="timevol">
+                <div class="songtime"></div>
+                <div class="volume">
+                  <img src="volume.svg" alt="" />
+                  <div class="range">
+                    <input type="range" name="  " id="">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
