--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <h2>Your Library</h2>
           </div>
           <div class="songList">
-            <ul></ul>
+            <ul>
+              
+            </ul>
           </div>
           <div class="footer">
             <div>
@@ -109,7 +111,32 @@
         <div class="spotifyPlaylists">
           <h1>Spotify Playlists</h1>
           <div class="cardContainer">
-            <div class="card">
+            <div data-folder="ncs" class="card">
+              <div class="play">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  width="18"
+                  height="18"
+                  color="#000000"
+                  fill="#000"
+                >
+                  <path
+                    d="M5 20V4L19 12L5 20Z"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
+              <img
+                src="https://i.scdn.co/image/ab67706f00000002f706f22d6c4c596096535f35"
+                alt=""
+              />
+              <h2>Chilled Classics</h2>
+              <p>Hits to boost your mood and fill you with happiness!</p>
+            </div>
+            <div data-folder="cs" class="card">
               <div class="play">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -151,7 +178,7 @@
                 <div class="volume">
                   <img src="volume.svg" alt="" />
                   <div class="range">
-                    <input type="range" name="  " id="">
+                    <input type="range" name="  " id="" />
                   </div>
                 </div>
               </div>
