--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
         </div>
         <div class="spotifyPlaylists">
           <h1>Spotify Playlists</h1>
+          
           <div class="cardContainer">
-            <div data-folder="ncs" class="card">
+            <!-- <div data-folder="ncs" class="card">
               <div class="play">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -160,7 +161,7 @@
               />
               <h2>Chilled Classics</h2>
               <p>Hits to boost your mood and fill you with happiness!</p>
-            </div>
+            </div> -->
           </div>
           <div class="playbar">
             <div class="seekbar">
